--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,14 +22,14 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "json-server-auth": "^1.2.1",
+    "json-server-auth": "^2.0.2",
     "moment": "^2.26.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular-devkit/build-angular": "^0.1000.5",
     "@angular/cli": "~9.1.5",
     "@angular/compiler-cli": "~9.1.6",
     "@types/jasmine": "~3.5.0",
