--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 #SMTP server
 spring.mail.host=smtp.gmail.com
