--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,10 +13,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.6",
-    "@angular/cdk": "^9.2.3",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.6",
     "@angular/compiler": "~9.1.6",
     "@angular/core": "~9.1.6",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.6",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.6",
