Fixed the tests to make the project executable

--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #JWT Hash Secret
-jwt.secret=javainuse
+jwt.secret=coronavirus
