--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #JWT Hash Secret
 jwt.secret=coronavirus
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
