--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.6",
     "json-server-auth": "^2.0.2",
     "moment": "^2.26.0",
+    "ngx-material-file-input": "^2.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
