--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialization-mode=always
