--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,10 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+## Project ##
+# Local directories
+uploads/
+
 ### Maven ###
 target/
 pom.xml.tag
