--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 #SMTP server
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=XXXXXXXXXXXXXXXXX
-spring.mail.password=XXXXXXXXXXXXXXXXX
+spring.mail.username=pavanfrancesco87@gmail.com
+spring.mail.password=nyvmobuksfwgycrn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
