--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 #SMTP server
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
