--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@ buildNumber.properties
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+.VSCodeCounter/*
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
