--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 #MySql database
+
+#Standard with localhost + local spring
 spring.datasource.url=jdbc:mysql://localhost:3306/sprangular
+
+#Docker version with both mariadb and spring deployed in containers
+#spring.datasource.url=jdbc:mysql://mariadbcomposer/sprangular
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
