--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "file-saver": "^2.0.2",
     "json-server-auth": "^2.0.2",
     "moment": "^2.26.0",
     "ngx-material-file-input": "^2.1.1",
