--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3"
 services:
   spring-jdbc:
     image: sprangular_server
-    container_name: spring-server
+    container_name: spring_server
     ports:
       - "8080:8080"
     networks:
-      - spring-maria
+      - spring-maria-angular
     depends_on:
       - mariadb
     restart: on-failure
@@ -19,10 +19,20 @@ services:
     ports:
       - "3306:3306"
     networks:
-      - spring-maria
+      - spring-maria-angular
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=sprangular
 
+  angular:
+    image: sprangular_client
+    container_name: sprangular_client
+    ports:
+      - "4200:4200"
+    networks:
+      - spring-maria-angular
+    depends_on:
+      - spring-jdbc
+
 networks:
-  spring-maria:
+  spring-maria-angular:
