--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   angular:
     image: sprangular_client
-    container_name: sprangular_client
+    container_name: angular_client
     ports:
       - "4200:4200"
     networks:
