--- a/resource_server/src/main/resources/application.properties
+++ b/resource_server/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #MySql database
 
 #Standard with localhost + local spring
-#spring.datasource.url=jdbc:mysql://localhost:3306/sprangular
+spring.datasource.url=jdbc:mysql://localhost:3306/sprangular
 
 #Docker version with both mariadb and spring deployed in containers
-spring.datasource.url=jdbc:mysql://mariadb_compose/sprangular
+#spring.datasource.url=jdbc:mysql://mariadb_compose/sprangular
 
 spring.datasource.username=root
 spring.datasource.password=root
